<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> ER Wait Time</string>
    <string name="title_activity_maps"> Map</string>
    <string name="title_location_permission"> Location Permission </string>
    <string name="text_location_permission"> Request Location Permission </string>
    <string name="ok"> OK </string>
    <string name="menu"> Menu </string>
    <string name="menu_login"> Login </string>
    <string name="default_info_title"> Default Info </string>
    <string name="detault_info_snippet"> Default Info Snippet </string>
    <string name="pick_place"> Pick Place </string>
    <string name="option_menu"> Option Places </string>
    <string name="title_activity_login"> Emergency Time </string>
    <string name="setting"> Setting</string>
    <string name="forget_password"> Forget Password </string>
    <string name="prompt_email"> Email </string>
    <string name="send"> Send Password </string>
    <string name="prompt_first_name"> First Name </string>
    <string name="prompt_last_name"> Last Name </string>
    <string name="prompt_height"> Height </string>
    <string name="prompt_weight"> Weight </string>
    <string name="prompt_blood"> Blood Group</string>
    <string name="prompt_password"> Password</string>
    <string name="prompt_confirm_password"> Confirm Password </string>
    <string name="action_sign_in"> Sign in or register</string>
    <string name="action_register"> Register </string>
    <string name="action_sign_in_short"> Sign in </string>
    <string name="error_invalid_email"> This email address is invalid </string>
    <string name="error_invalid_name"> This name is invalid</string>
    <string name="error_invalid_password"> This password is too short </string>
    <string name="error_matched_password"> This password is not matched</string>
    <string name="error_incorrect_password"> This password is incorrect </string>
    <string name="error_user_email_not_found"> This user not found in database</string>
    <string name="error_user_email_already_register"> Email already registered </string>
    <string name="error_field_required"> This field is required </string>
    <string name="permission_rationale"> Location permissions are needed for providing email completions.</string>
    <string name="title_activity_profile_screen"> Profile</string>
    <string name="title_activity_settings">Settings </string>
    <string name="pref_header_general"> General </string>
    <string name="distance_units"> KM </string>
    <string name="height_units"> in</string>
    <string name="weight_units"> kg</string>


    <!--  Easylogics-->


  <!--  <string name="admob_app_id">ca-app-pub-8168972776142882~3793667675</string>
    <string name="admob_banner_id">ca-app-pub-8168972776142882/5462327780</string>
    <string name="admob_interstitial_id">ca-app-pub-8168972776142882/2676506058</string>-->


    <!--DR Zubair -->
      <string name="admob_app_id">ca-app-pub-2497524301046342~2772439473</string>
    <string name="admob_banner_id">ca-app-pub-2497524301046342/3154247699</string>
    <string name="admob_interstitial_id">ca-app-pub-2497524301046342/9883307574</string>


<!--
     test ad ids for testing-->

  <!--  <string name="admob_app_id">ca-app-pub-2497524301046342~2772439473</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>-->


    <string name="wait_message"> Please wait! Data is loading</string>
    <string-array name="blood_group_list">
        <item> A+</item>
        <item> B+</item>
        <item> AB+</item>
        <item> B-</item>
        <item> A-</item>
        <item> AB-</item>
        <item> O+</item>
        <item> O-</item>

    </string-array>

    <!-- <string name="google_maps_key" translatable="false">AIzaSyB7iA3Bqquk4esrs2ZEZ70fAohMXvQX1IY</string>-->

    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_text">
        ER Wait Time Privacy Policy\n\n
        
        This app provides estimated ER wait times at nearby hospitals. We do not collect or store any personal information from users.\n\n
        
        DATA WE COLLECT:\n
        • Location data: We access your location only to show nearby hospitals. This data is used only within the app and is never stored on our servers.\n
        • App usage data: Google may collect anonymous usage statistics to help improve the app experience.\n\n
        
        DATA WE DO NOT COLLECT:\n
        • Personal information: We do not require login or collect any personal information like names, emails, or health data.\n
        • Photos or media: We do not access or collect photos or media files.\n\n
        
        THIRD-PARTY SERVICES:\n
        • Google Maps: Used to display maps and location information according to Google\'s privacy policy.\n
        • Google AdMob: Used to display advertisements.\n\n
        
        CONTACT:\n
        For questions about privacy, contact us at support@easytechnologiez.com
    </string>

</resources>