<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/splash_icon_white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/prompt_first_name"
        android:id="@+id/icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="35sp"/>



        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_view"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:errorTextAppearance="@style/InputError">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColorHint="@color/colorPrimary"
                    android:ems="10"
                    android:shadowColor="@color/colorAccent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/password"
                    android:drawableLeft="@mipmap/email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/colorAccent"
                android:layout_gravity="center_horizontal"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColorHint="@color/colorPrimary"
                    android:ems="10"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:drawableLeft="@mipmap/lock"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:textColorLink="@android:color/black"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:autoLink="web"
                android:id="@+id/forget_password"
                android:text="@string/forget_password"/>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_sign_in_short"
                android:background="@drawable/button_selector"
                android:textStyle="bold" />

            <!--<Button
                android:id="@+id/email_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_register"
                android:background="@color/colorWhite"
                android:textStyle="bold" />
-->


        </LinearLayout>

    <com.google.android.gms.ads.AdView android:id="@+id/Ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_id"/>

</LinearLayout>

    </ScrollView>