<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/register_screen_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/prompt_first_name"
        android:id="@+id/icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="25sp"/>



        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/f_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_first_name"
                    android:ems="10"
                    android:drawableLeft="@mipmap/user"
                    android:shadowColor="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/l_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/l_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_last_name"
                    android:drawableLeft="@mipmap/user"
                    android:ems="10"
                    android:shadowColor="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/male"/>

            </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/gender"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:id="@+id/GenderText"
                    android:textColor="@android:color/white"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:buttonTint="@color/colorWhite"
                    android:textColor="@android:color/white"
                    android:checked="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/female"
                    android:id="@+id/male"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:buttonTint="@color/colorWhite"
                    android:textColor="@android:color/white"
                    android:id="@+id/female"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/email"/>

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:drawableLeft="@mipmap/email"
                    android:shadowColor="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/password"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:ems="10"
                    android:shadowColor="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:drawableLeft="@mipmap/lock"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/password_confirm"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionId="6"
                    android:ems="10"
                    android:shadowColor="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:drawableLeft="@mipmap/lock"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionDone"/>

            </android.support.design.widget.TextInputLayout>

            <!--<android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/user_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_height"
                    android:inputType="text"
                    android:drawableLeft="@mipmap/weight"
                    android:ems="10"
                    android:shadowColor="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/user_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_weight"
                    android:inputType="text"
                    android:drawableLeft="@mipmap/weight"
                    android:ems="10"
                    android:shadowColor="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Spinner
                    android:id="@+id/user_blood"
                    android:layout_width="215dp"
                    android:padding="7dp"
                    android:entries="@array/blood_group_list"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite" />

            </RelativeLayout>

-->
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorWhite"
                android:text="@string/action_register"
                android:textStyle="bold" />

        </LinearLayout>

</LinearLayout>
    </ScrollView>
